# SmartMirror

./: Project.java  client_test.py
Arduino/code_ESP8266_Functional_Not_Finished/: code_ESP8266_Functional_Not_Finished.ino
Arduino/code_TouchSensor_Functional/: code_TouchSensor_Functional.ino
Arduino/final_code/: final_code.ino
FINAL/Arduino_final/: Arduino_final.ino
FINAL/Qt_final/new_ui/: .editorconfig  emotionprocessworker.h  main.cpp  mainwindow.cpp  mainwindow.ui  musicplayerworker.h  weatherpanel.ui
Gesture/: CMakeLists.txt  gesture_recognition.cpp  gesture_recognition.hpp  main.cpp  mainwindow.cpp  mainwindow.h  server_opencv.cpp  smart_mirror_core.py  test.py
PYTHON/: final.py  gestuer_sr1.py  gesture_sr.py  gesture_sr1.py  gesture_sr_new.py  test.py
QT/: mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/Timer_Sample/: mainwindow.ui
QT/new/: emotionprocessworker.cpp  gesturesocketworker.cpp  gesturesocketworker.h  main.cpp  mainwindow.cpp  mainwindow.h  musicbar.cpp  musicbar.h  musicbar.ui  musicplayerworker.cpp  newspanel.cpp  server_latest_api.pro  tcpsocketworker.cpp  tcpsocketworker.h  wavewidget.cpp  wavewidget.h  weatherpanel.cpp
QT/new_server/: mainwindow.cpp  mainwindow.h  mainwindow.ui  new_server.pro  new_server.pro.user.044d1f1  newspanel.cpp  newspanel.ui  weatherpanel.cpp  weatherpanel.h  weatherpanel.ui
QT/new_ui/: emotionprocessworker.cpp  fonts.qrc  gesturesocketworker.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicbar.cpp  musicbar.h  musicbar.ui  musicplayerworker.cpp  new_ui.pro  newspanel.cpp  newspanel.h  newspanel.ui  wavewidget.cpp  wavewidget.h  weatherpanel.cpp  weatherpanel.ui
QT/server_latest/: mainwindow.cpp  mainwindow.h  newspanel.cpp
QT/server_latest/server_latest/: mainwindow.cpp  mainwindow.h  newspanel.ui  server_latest.pro.user.7e73d75  weatherpanel.h
QT/server_latest_api/: mainwindow.cpp  mainwindow.h  musicbar.cpp  musicbar.h  musicbar.ui  newspanel.cpp  server_latest_api.pro  wavewidget.cpp  wavewidget.h  weatherpanel.cpp  weatherpanel.h
QT/weather_sample/untitled/: mainwindow.cpp  mainwindow.ui
QT/weather_sample/untitled/untitled/: mainwindow.cpp
SR/: sr.py  sr_new.py
TEST/: client_test.py
TEST/Gesture/: CMakeLists.txt  gesture_recognition.hpp
TEST/QT/server_latest_api/: musicbar.ui  newspanel.h  weatherpanel.cpp  weatherpanel.ui
code_DHT11_Functional/: code_DHT11_Functional.ino
code_HC-SR04_Functional/: code_HC-SR04_Functional.ino
new_server/: mainwindow.cpp  mainwindow.h  new_server.pro
opencv/: opencv.py  opencv1.py  opencv2.py  opencv_latest.py  opencv_latest1.py  test1.py
test/SmartMirror-main/Gesture/: main.cpp  server_opencv.cpp
test/SmartMirror-main/opencv/: opencv_latest.py
test/new_server/: mainwindow.cpp  mainwindow.h  new_server.pro.user.7e73d75  newspanel.cpp  newspanel.h  newspanel.ui
(+7 files in other folders)
